# Logistic_regression_from_scratch

./: LICENSE  Makefile.docker  README.md  logistic_regression_github.ipynb  pyproject.toml
data/: penguins.csv
docker/: dev.dockerfile  lab.dockerfile
notebooks/: logistic_regression_github.ipynb
