[tool.poetry]
name = "jupyter-lab"
version = "0.1.0"
description = "Jupyter notebook in a docker environment"
authors = ["Mikhail Kuklin"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"

[tool.poetry.dev-dependencies]
numpy = "^1.21.5"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
pytest-watch = "^4.2.0"
category-encoders = "^2.5.0"
missingno = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

